--- a/index.html
+++ b/index.html
@@ -22,20 +22,20 @@
                 </div>
                 <div class='form' id="fromLogin">
                     <template v-if='active === "register"'>
-                        <div class="input"><input type="text" name="email" id='email' /><label for="email">邮箱</label></div>
-                        <div class="input"><input type="text" name="Username" id="username" /><label for="username">用户名</label></div>
-                        <div class="input"><input type="password" name="Password" id="Password" /><label for="Password">密码</label></div>
-                        <div class="input"><input type="password" name="repeat" id="Passwordrepeat" /><label for="Passwordrepeat">重复密码</label></div>
+                        <div class="input"><input :class='{ hasValue: registerForm.email }' v-model='registerForm.email' type="text" name="email" id='email' /><label for="email">邮箱</label></div>
+                        <div class="input"><input :class='{ hasValue: registerForm.Username }' v-model='registerForm.Username' type="text" name="Username" id="username" /><label for="username">用户名</label></div>
+                        <div class="input"><input :class='{ hasValue: registerForm.Password }' v-model='registerForm.Password' type="password" name="Password" id="Password" /><label for="Password">密码</label></div>
+                        <div class="input"><input :class='{ hasValue: registerForm.repeat }' v-model='registerForm.repeat' type="password" name="repeat" id="Passwordrepeat" /><label for="Passwordrepeat">重复密码</label></div>
                     </template>
 
                     <template v-if='active === "login"'>
-                        <div class="input"><input type="text" name="Username" id="username" /><label for="username">用户名</label></div>
-                        <div class="input"><input type="password" name="Password" id="Password" /><label for="Password">密码</label></div>
+                        <div class="input"><input :class='{ hasValue: loginForm.Username }' v-model='loginForm.Username' type="text" name="Username" id="username" /><label for="username">用户名</label></div>
+                        <div class="input"><input :class='{ hasValue: loginForm.Password }' v-model='loginForm.Password' type="password" name="Password" id="Password" /><label for="Password">密码</label></div>
                     </template>
 
                     <span>忘记?</span>
 
-                    <button type="submit">登陆</button>
+                    <button type="submit" @click='submit'>登陆</button>
                 </div>
             </div>
         </div>
@@ -46,16 +46,25 @@
 var vue = new Vue({
     el: '#app',
     data: {
-        active: 'login'
+        active: 'login',
+        registerForm: { email: '', Username: '', Password: '', repeat: '', },
+        loginForm: { Username: '', Password: '', },
     },
     methods: {
         go (type) {
             this.active = type
+        },
+        submit() {
+            if (type === 'login') {
+                console.log('login', this.loginForm)
+            } 
+
+            if (type === 'register') {
+                console.log('register', this.registerForm)
+            }
         }
     },
-    beforeMount () {
-        
-    }
+    beforeMount () {}
 })
 </script>
 
